add feat: add registration component with form fields for user details

--- a/frontend/src/customStyle.css
+++ b/frontend/src/customStyle.css
@@ -41,6 +41,12 @@ img.logo-alquilAR {
   transform: translateY(-6px);
 }
 
+.login-form ::placeholder,
+.register-form ::placeholder {
+  color: #636b74 !important;
+}
+
+
 /* Footer */
 
 footer p {
