style: enhance navbar styles and improve responsiveness

--- a/frontend/src/customStyle.css
+++ b/frontend/src/customStyle.css
@@ -11,9 +11,43 @@ body {
   min-height: 100vh;
 }
 
+/* NAV BAR */
+.navbar {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 img.logo-alquilAR {
   height: 100px;
   filter: drop-shadow(0 0 6px rgba(0, 0, 0, 0.619));
+}
+
+.navbar .nav-link {
+  position: relative;
+  text-decoration: none;
+  transition: color 0.2s ease;
+}
+
+.navbar .nav-link::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  width: 0;
+  height: 2px;
+  border-radius: 100%;
+  background-color: #fff;
+  transition: width 0.2s ease;
+}
+
+.navbar .nav-link:hover::after {
+  width: 10%;
+}
+
+.navbar .btn-outline-light:hover {
+  background-color: #fff;
+  color: #ff9800;
+  transition: all 0.3s ease;
 }
 
 /* Illustrations */
@@ -41,8 +75,7 @@ img.logo-alquilAR {
   transform: translateY(-6px);
 }
 
-.login-form ::placeholder,
-.register-form ::placeholder {
+::placeholder {
   color: #636b74 !important;
 }
 
