--- a/frontend/src/customStyle.css
+++ b/frontend/src/customStyle.css
@@ -108,3 +108,19 @@ ul.footer-terms-conditions > li > a:hover {
   color: #102721 !important;
   transform: scale(1.2);
 }
+
+/* Property Form */
+.btn-link {
+  text-decoration: none !important;
+  color: inherit;
+}
+
+.btn-link:hover {
+  text-decoration: underline !important; 
+}
+
+.active-tab {
+  text-decoration: underline !important; 
+  font-weight: bold;
+  color: #2eb7c1; 
+}
