--- a/frontend/src/customStyle.css
+++ b/frontend/src/customStyle.css
@@ -79,6 +79,15 @@ img.logo-alquilAR {
 }
 
 
+/* ToolTip */
+label.form-label {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+
 /* Footer */
 
 footer p {
